# DeepJelly

./: .gitignore  Cargo.toml  LICENSE  README.md  README_AGENT.md  README_EN.md  debug.html  dialog.html  index.html  onboarding.html  package-lock.json  package.json  quit-confirm.html  settings.html  test-api.sh  test-http-api.ps1  test_models.rs  tsconfig.json  vite.config.ts  vitest.config.ts
adapters/openclaw/: .eslintrc.js  README.md  openclaw.plugin.json  package.json  run-test.bat  tsconfig.json  vitest.config.ts
config/: brain_adapter.json
data/: app_integrations.json  assistants.json
data/default/: assistants.json
data/user/: assistants.json  display_slots.json  language.json
scripts/: build-portable.ps1  diagnose-connection.ps1
skills/deepjelly-character/: SKILL.md  config.md
skills/deepjelly-integrate/: SKILL.md  config.md
src/: App.css  App.svelte  App.tsx  debug.tsx  main.tsx  onboarding-main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  character_load_log.txt  rust_i18n.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/characters/asst_assistant/default/: config.json
src-tauri/i18n/: .gitkeep  en.toml  ja.toml  zh.toml
src-tauri/icons/: README.md
src-tauri/src/: input_state.rs  lib.rs  locale.rs  main.rs  resource_watcher.rs  tray.rs  tray_test.rs
src-tauri/src/brain/: client.rs  config.rs  manager.rs  mod.rs  types.rs
src-tauri/src/commands/: app_integration.rs  assistant.rs  brain.rs  character.rs  data.rs  display_slot.rs  endpoint.rs  event.rs  input.rs  locale.rs  messages.rs  mod.rs  system.rs  window.rs
src-tauri/src/gateway/: client.rs  mod.rs  server.rs  types.rs
src-tauri/src/gateway/common/: config.rs  error.rs  mod.rs
src-tauri/src/gateway/http/: middleware.rs  mod.rs  router.rs  server.rs
src-tauri/src/gateway/http/handlers/: content.rs  integration.rs  mod.rs  types.rs
src-tauri/src/gateway/ws/: client.rs  mod.rs  server.rs  types.rs
src-tauri/src/logic/: config.rs  data_init.rs  event_engine.rs  mod.rs  reaction_system.rs  router.rs  session.rs  state.rs  system1.rs
src-tauri/src/logic/character/: app_integration.rs  assistant.rs  character_integration.rs  manager.rs  mod.rs  types.rs
src-tauri/src/logic/protocol/: cap.rs  mod.rs
src-tauri/src/models/: appearance.rs  assistant.rs  character.rs  endpoint.rs  integration.rs  mod.rs
src-tauri/src/utils/: error.rs  logging.rs  mod.rs
src-tauri/tests/: http_api_integration_test.rs
src-tauri/tests/common/: assertions.rs  helpers.rs  mod.rs
src-tauri/tests/mock/: config.rs  event.rs  mod.rs  system1.rs  websocket.rs
src-tauri/windows/: hooks.nsh
src/components/: DialogApp.tsx
src/config/: index.ts  (+2 more)
test/: setup.ts
(+189 files in other folders)
