[workspace]
resolver = "2"
members = [
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DeepJelly Team"]
license = "MIT"

[workspace.dependencies]
# 共享依赖版本管理
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
