[package]
name = "deepjelly"
version = "0.1.0"
edition = "2021"
description = "DeepJelly Desktop Virtual Assistant"
authors = ["DeepJelly Team"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
notify = "6"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
rust-i18n = "3"
rdev = "0.5"
rand = "0.8"
chrono = "0.4"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

# HTTP API server dependencies
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
async-trait = "0.1"
http = "1.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"


